完成若干算法题